--- a/products.css
+++ b/products.css
@@ -51,6 +51,11 @@ header {
   align-items: center;
 }
 
+.logo a {
+  text-decoration: none;
+  color: white;
+}
+
 .logo i {
   margin-right: 10px;
 }
