--- a/styles.css
+++ b/styles.css
@@ -240,12 +240,12 @@ nav ul li a.active {
 }
 
 /* see-more */
-.products .see-more {
+.products .product-grid .see-more {
     text-align: center !important;
     margin-top: 30px !important;
 }
 
-.products .see-more .btn {
+.products .product-grid .see-more .btn {
     background: #009879 !important;
     color: #fff !important;
     padding: 12px 25px !important;
@@ -256,7 +256,7 @@ nav ul li a.active {
     transition: all 0.3s ease;
 }
 
-.products .see-more .btn:hover {
+.products .product-grid .see-more .btn:hover {
     background: #007f63 !important;
 }
 
